ts enforcement & apis for standards & webview state handling in new file
- new extensionApi.ts in webview (setGlobalState() createInfoToast())
- setState in webview rename to findCurrentState
- state located to new file webviewState.ts, there now using svelte stores to save current & allStates and updatedAllStates as derived store out of both (updates autom) and when that is changed in turn call setGlobalState($updatedAllStates), in other files now .subscribe(), .update(), .set() on stores
- no fallback to set currentState anymore if no event listened, instead set correct to default on initialization
- now save current view column to open back up there
- types folder (with d.ts files as ts complains abt rootDir otherwise, had to include path in tsconfig.json) with types across projects
- ToExtensionMessage: accepts range of commands with own value types, globals.d.ts only accepts that type as postMessage message type, extension assert received message is that type
- FromExtensionMessage: No way to override normal webview.postMessage() signature for same parameter name & count => webviewApi.ts to wrap that postMessage() with new type like in ToExtension case and use that in extension

--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -7,6 +7,10 @@
 		],
 		"sourceMap": true,
 		"rootDir": ".",
-		"strict": true
+		"strict": true,
+		"baseUrl": ".",
+		"paths": {
+		  "*": ["../types/*", "*"]
+		}
 	}
 }
