--- a/svelte/tsconfig.json
+++ b/svelte/tsconfig.json
@@ -14,8 +14,8 @@
     "allowJs": true,
     "checkJs": true,
     "isolatedModules": true,
-    "typeRoots" : ["./node_modules/@types","./declarations.d.ts","./globals.d.ts"]
+    "typeRoots" : ["./node_modules/@types","./declarations.d.ts","src/globals.d.ts"]
   },
-  "include": ["src/**/*.d.ts", "src/**/*.ts", "src/**/*.js", "src/**/*.svelte","./declarations.d.ts","./globals.d.ts"],
+  "include": ["src/**/*.d.ts","./*.d.ts","src/**/*.ts", "src/**/*.js", "src/**/*.svelte","./declarations.d.ts","src/globals.d.ts","../types"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
