python mini server implementation
- Flask, Django full stack framework (vs Flask micro framework = lightweight, simple to use for simple cases) https://rapidapi.com/blog/best-python-api-frameworks/, https://www.browserstack.com/guide/top-python-rest-api-frameworks and according to https://gustavwillig.medium.com/python-web-development-in-2022-which-web-frameworks-are-the-most-popular-by-github-stars-598ba5a6d5ae most stars after django in 2022, 2023 still more than FastAPI which was second then
- created new project with poetry
- installed pyinstaller to bundle into one executable file, which comes with python environment & all libraries used => this way python not needed for user nor all the libraries and no dependency or version issues, downside: larger file as libraries (but no need to run install cmd either) & separate executables for different systems (Linux, windows, macos), here will have to create them on machines with that operating system and then in the extension find out what the user is running to execute that file
- then watchdog to watch for changes here & compile to extension src folder
- then executing it in extensions activate() with child_process.exec()
- problem: its running flasks development server which is not intended for production, fine?
- Added cors to only allow vscode-webview protocol
- new svelte ServerCaller component calls server and logs under button
- extension logging of python server logs (somehow logger.error() or similar [not print] is used as default there thus logging stderr as normal console.log)

--- a/.gitignore
+++ b/.gitignore
@@ -91,3 +91,11 @@ typings/
 src/compiled-fw/
 
 dist/
+
+flask/build/
+
+*.spec
+
+flask/python-mini-server/__pycache__/
+
+src/compiled-mini-server/
