--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "vscode:prepublish": "npm run package",
     "compile": "webpack",
     "watch:extension": "webpack --watch",
-    "watch:mini-server": "cd flask && watchmedo shell-command --patterns='*.py' --recursive --command='pyinstaller ./python-mini-server/main.py -F --hidden-import=flask --distpath=../src/compiled-mini-server | chmod +x ../src/compiled-mini-server/main'",
+    "watch:mini-server": "cd flask && watchmedo shell-command --patterns='*.py' --recursive --command='./build_flask.sh'"    ,
     "watch-all": "npm-run-all --parallel watch:*",
     "package": "webpack --mode production --devtool hidden-source-map",
     "compile-tests": "tsc -p . --outDir out",
